css/main.css
body {
    font-family: "Roboto", sans-serif;
    color: #2d3c49;
    font-weight: 300;
    background-color: #29343e;

}

hr {
    border: none;
    height: 2px;
    background-color: #7d97ad;
    margin-bottom: 1px;
}

.nav li {
    list-style: none;

}

.banner {
    margin-top: 20px;
}

.main {
    background: #c9d6e0;
    border-radius: 20px;
    padding: 30px;
    margin-bottom: 20px;
    font-size: 18px;
    display: inline-block;
}

.text-thin {
    font-weight: 100;
    color: aliceblue;
}

.title-logo {
    margin-top: 15px;
}

h2, h4 {
    color: aliceblue;
}

.main-title {
    margin-bottom: 25px;
}

.table>tbody>tr>td {
    border-top: 1px solid #29343e;
}

.table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
  background-color: #b9c6d0;
}

.gallery {
    margin: 0 auto;
    margin-top: 15px;
    margin-bottom: 15px;
}

footer p {
    color: aliceblue;
}

/* Remove margins and padding from the list, and add a black background color */
ul.topnav {
    list-style-type: none;
    margin-top: 10px;
    padding: 0;
    overflow: hidden;
}

/* Float the list items side by side */
ul.topnav li {float: left;}

/* Style the links inside the list items */
ul.topnav li a {
    display: flex;
    color: aliceblue;
    text-align: center;
    padding: 12px 12px;
    text-decoration: none;
    transition: 0.3s;
    font-size: 20px;
}

/* Change background color of links on hover */
ul.topnav li a:hover {background-color: #c9d6e0;}

/* Hide the list item that contains the link that should open and close the topnav on small screens */
ul.topnav li.icon {display: none;}



/*Responsive Styling*/

@media screen and (max-width:680px) {
  ul.topnav li:not(:first-child) {display: none;}
  ul.topnav li.icon {
    float: left;
    display: inline-block;
  }
}

@media screen and (max-width:680px) {
  ul.topnav.responsive {position: relative;}
  ul.topnav.responsive li.icon {
    position: absolute;
    right: 0;
    top: 0;
  }
  ul.topnav.responsive li {
    float: none;
    display: inline;
  }
  ul.topnav.responsive li a {
    display: block;
    text-align: left;
  }
}

